# game-helper

./: .gitignore  LICENCE  Makefile  README.md  TODO.md  card_maker.py  excelhelper.py  image_sheet.py  pdf_sheets.py  pyproject.toml  requirements.txt  workbook.py
demos/: card_maker_demo.py  image_sheet_demo.py  pdf_sheets_demo.py
docs/: gamehelper.html  index.html  search.js
docs/gamehelper/: card_maker.html  excelhelper.html  image_sheet.html  pdf_sheets.html  utils.html
docs/superpowers/plans/: 2026-03-29-font-tidying.md
docs/superpowers/specs/: 2026-03-29-font-tidying-design.md
gamehelper/: card_maker.py  excelhelper.py  image_sheet.py  pdf_sheets.py  utils.py
tests/: .test_workbook.py.swp  test.xlsx  test_card_maker.py  test_excelhelper.py  test_helper.py  test_image_sheet.py  test_pdf_sheets.py  test_utils.py  test_workbook.py  workbook_simple.xlsx
