# This document compiled using
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "gamehelper"
version = "0.1"
authors = [
  { name="Nik Silver" },
]
description = "Helping create cards and tokens for board games."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "LGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/niksilver/game-helper"
Issues = "https://github.com/niksilver/game-helper/issues"
