# This document compiled using
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "gamehelper"
version = "0.1"
authors = [
  { name="Nik Silver" },
]
description = "Helping create cards and tokens for board games."

requires-python = ">=3.10"

dependencies = [
    "defusedxml==0.7.1",
    "et_xmlfile==2.0.0",
    "fonttools==4.60.1",
    "fpdf2==2.8.4",
    "iniconfig==2.3.0",
    "Jinja2==3.1.6",
    "markdown2==2.5.4",
    "MarkupSafe==3.0.3",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pdf2image==1.17.0",
    "pdoc==16.0.0",
    "pillow==12.0.0",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "pytest==8.4.2",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

readme = "README.md"
license = "LGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/niksilver/game-helper"
Issues = "https://github.com/niksilver/game-helper/issues"
